5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/2535/executions/1590_825.log
== SUBMITION (2019-03-26 12:58:16) 
-- CODE:
r = float(input())

A = pi*r**2
v = 3/4*pi*r**3

print(A)
print(v)
-- EXECUTION TIME:
0.121079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 3, in <module>
    A = pi*r**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:58:28) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = 3/4*pi*r**3

print(A)
print(v)
-- EXECUTION TIME:
0.192705
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.61725123519331
214.70822291877744
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.3879062809779
4427.48007263045
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:58:30) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = 3/4*pi*r**3

print(A)
print(v)
-- OUTPUT:
63.61725123519331
214.70822291877744
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:58:51) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = 3/4*pi*r**3

print(round(A, 3))
print(round(v, 2))
-- EXECUTION TIME:
0.127544
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
214.71
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
4427.48
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:58:53) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = 3/4*pi*r**3

print(round(A, 3))
print(round(v, 2))
-- OUTPUT:
63.617
214.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:59:14) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = 4/3*pi*r**3

print(round(A, 3))
print(round(v, 2))
-- EXECUTION TIME:
0.139824
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.7
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:59:16) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = 4/3*pi*r**3

print(round(A, 3))
print(round(v, 2))
-- OUTPUT:
63.617
381.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:59:22) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = 4/3*pi*r**3

print(round(A, 3))
print(round(v, 2))
-- EXECUTION TIME:
0.142682
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.7
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:59:34) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = (4/3)*pi*(r**3)

print(round(A, 3))
print(round(v, 2))
-- EXECUTION TIME:
0.105499
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.7
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:59:53) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = (4/3)*pi*(r**3)

print(round(A, 3))
print(round(v, 2))
-- OUTPUT:
63.617
381.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:23:36) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = (4/3)*pi*(r**3)

print(round(A, 3))
print(round(v, 2))
-- OUTPUT:
63.617
381.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:23:49) 
-- CODE:
from math import*

r = float(input())

A = pi*r**2
v = (4/3)*pi*(r**3)

print(round(A, 3))
print(round(v, 2))
-- EXECUTION TIME:
0.243959
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.7
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
